--- a/refer-effect/menuEffect/javascriptME01.html
+++ b/refer-effect/menuEffect/javascriptME01.html
@@ -1,43 +1,282 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu Effect</title>
 
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/highlight.css">
+    <style>
+        #tab-menu {
+            min-width: 600px;
+            background: rgb(118, 133, 175);
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+            border-radius: 5px;
+            overflow: hidden;
+            font-family: 'NEXON Lv1 Gothic OTF';
+            color: #fff;
+
+        }
+
+        .tab-btn ul {
+            display: flex;
+        }
+
+        .tab-btn li {
+            width: 20%;
+            list-style: none;
+            text-align: center;
+        }
+
+        .tab-btn li a {
+            color: #fff;
+            text-decoration: none;
+            padding: 18px 15px 15px 15px;
+            display: block;
+        }
+
+        .tab-btn li.active a {
+            border-bottom: 3px solid rgb(61, 69, 128);
+            color: #000;
+        }
+
+        .tab-cont {
+            background: #fff;
+            padding: 20px;
+            color: #222;
+        }
+
+        .tab-cont>div {
+            display: none;
+        }
+
+        .tab-cont>div:first-child {
+            display: block;
+        }
+
+        .tab-cont>div h2 {
+            margin-bottom: 10px;
+        }
+
+        .tab-cont>div p {
+            line-height: 1.6;
+        }
+    </style>
 </head>
-<body class="bg bg16">
+
+<body class="bg bg11">
+
+    <!-- contents -->
+    <main>
+        <div id="tab-menu">
+            <div class="tab-btn">
+                <ul>
+                    <li class="active"><a href="#">HTML</a></li>
+                    <li><a href="#">CSS</a></li>
+                    <li><a href="#">Javascript</a></li>
+                    <li><a href="#">Jquery</a></li>
+                    <li><a href="#">SCSS</a></li>
+                </ul>
+            </div>
+            <div class="tab-cont">
+                <div>
+                    <h2>HTML</h2>
+                    <p>HTML (Hypertext Markup Language,하이퍼텍스트 마크업 언어)는 프로그래밍 언어는 아니고, 우리가 보는 웹페이지가 어떻게 구조화되어 있는지 브라우저로
+                        하여금 알 수 있도록 하는 마크업 언어입니다</p>
+                </div>
+                <div>
+                    <h2>CSS</h2>
+                    <p>김우석</p>
+                </div>
+                <div>
+                    <h2>Javascript</h2>
+                    <p>김우석</p>
+                </div>
+                <div>
+                    <h2>Jquery</h2>
+                    <p>jQuery는 HTML의 클라이언트 사이드 조작을 단순화 하도록 설계된 크로스 플랫폼의 자바스크립트 라이브러리 입니다.</p>
+                </div>
+                <div>
+                    <h2>SCSS</h2>
+                    <p>김우석</p>
+                </div>
+            </div>
+        </div>
+    </main>
+    <!-- contents -->
+
     <!-- info -->
     <div class="info">
         <h1>Javascript Menu Effect01</h1>
         <p>메뉴 이펙트 - 탭 메뉴</p>
-        <div class="info right">
-            <ul>
-                <li class="active"><a href="#">1</a></li>
-                <li><a href="#">2</a></li>
-            </ul>
-            <ul>
-                <li><a href="#">1</a></li>
-                <li><a href="#">2</a></li>
-            </ul>
-        </div>
-        <div class="info bottom">
-            <button>소스보기</button>
-        </div>
     </div>
+    ​
+    <div class="info right">
+        <ul>
+            <li class="active"><a href="javascriptME01.html">1</a></li>
+            <li><a href="javascriptME02.html">2</a></li>
+            <li><a href="javascriptME03.html">3</a></li>
+            <li><a href="javascriptME04.html">4</a></li>
+            <li><a href="javascriptME05.html">5</a></li>
+        </ul>
+        <ul>
+            <li><a href="jqueryME01.html">1</a></li>
+            <li><a href="jqueryME02.html">2</a></li>
+            <li><a href="jqueryME03.html">3</a></li>
+            <li><a href="jqueryME04.html">4</a></li>
+            <li><a href="jqueryME05.html">5</a></li>
+        </ul>
+    </div>
+    ​
+    <div class="info bottom">
+        <button>소스 보기</button>
+    </div>
+    <!-- //info -->
 
-   
     <div id="cont-wrap">
         <div class="cont-bg">
             <div class="cont-box">
-<pre><code>
-dddddddddddd
- </code></pre>
+                <div class="code-view">
+                    <div class="view-header">
+                        <div class="dot" aria-hidden="true">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </div>
+                    </div>
+                    <div class="view-title">
+                        <ul>
+                            <li class="active"><a href="#c">HTML</a></li>
+                            <li><a href="#c">CSS</a></li>
+                            <li><a href="#c">Javascript</a></li>
+                        </ul>
+                    </div>
+                    <div class="view-cont">
+                        <div class="html">
+<pre><code class="language-html">  &lt;div id="tab-menu"&gt;
+    &lt;div class="tab-btn"&gt;
+        &lt;ul&gt;
+            &lt;li class="active"&gt;&lt;a href="#"&gt;HTML&lt;/a&gt;&lt;/li&gt;
+            &lt;li&gt;&lt;a href="#"&gt;CSS&lt;/a&gt;&lt;/li&gt;
+            &lt;li&gt;&lt;a href="#"&gt;Javascript&lt;/a&gt;&lt;/li&gt;
+            &lt;li&gt;&lt;a href="#"&gt;Jquery&lt;/a&gt;&lt;/li&gt;
+            &lt;li&gt;&lt;a href="#"&gt;SCSS&lt;/a&gt;&lt;/li&gt;
+        &lt;/ul&gt;
+    &lt;/div&gt;
+    &lt;div class="tab-cont"&gt;
+        &lt;div&gt;
+            &lt;h2&gt;HTML&lt;/h2&gt;
+            &lt;p&gt;HTML (Hypertext Markup Language,하이퍼텍스트 마크업 언어)는 프로그래밍 언어는 아니고, 우리가 보는 웹페이지가 어떻게 구조화되어 있는지 브라우저로
+                하여금 알 수 있도록 하는 마크업 언어입니다&lt;/p&gt;
+        &lt;/div&gt;
+        &lt;div&gt;
+            &lt;h2&gt;CSS&lt;/h2&gt;
+            &lt;p&gt;김우석&lt;/p&gt;
+        &lt;/div&gt;
+        &lt;div&gt;
+            &lt;h2&gt;Javascript&lt;/h2&gt;
+            &lt;p&gt;김우석&lt;/p&gt;
+        &lt;/div&gt;
+        &lt;div&gt;
+            &lt;h2&gt;Jquery&lt;/h2&gt;
+            &lt;p&gt;jQuery는 HTML의 클라이언트 사이드 조작을 단순화 하도록 설계된 크로스 플랫폼의 자바스크립트 라이브러리 입니다.&lt;/p&gt;
+        &lt;/div&gt;
+        &lt;div&gt;
+            &lt;h2&gt;SCSS&lt;/h2&gt;
+            &lt;p&gt;김우석&lt;/p&gt;
+        &lt;/div&gt;
+    &lt;/div&gt;
+&lt;/div&gt;
+</code></pre>
+                        </div>
+                        <div class="css">
+<pre><code class="language-css">  #tab-menu {
+    min-width: 600px;
+    background: rgb(118, 133, 175);
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 5px;
+    overflow: hidden;
+    font-family: 'NEXON Lv1 Gothic OTF';
+    color: #fff;
+
+}
+
+.tab-btn ul {
+    display: flex;
+}
+
+.tab-btn li {
+    width: 20%;
+    list-style: none;
+    text-align: center;
+}
+
+.tab-btn li a {
+    color: #fff;
+    text-decoration: none;
+    padding: 18px 15px 15px 15px;
+    display: block;
+}
+
+.tab-btn li.active a {
+    border-bottom: 3px solid rgb(61, 69, 128);
+    color: #000;
+}
+
+.tab-cont {
+    background: #fff;
+    padding: 20px;
+    color: #222;
+}
+
+.tab-cont>div {
+    display: none;
+}
+
+.tab-cont>div:first-child {
+    display: block;
+}
+
+.tab-cont>div h2 {
+    margin-bottom: 10px;
+}
+
+.tab-cont>div p {
+    line-height: 1.6;
+}
+</code></pre>
+                        </div>
+                        <div class="javascript">
+<pre><code class="language-javascript">const tabBtn = document.querySelectorAll(".tab-btn ul li");
+const tabCont = document.querySelectorAll(".tab-cont > div");
+
+tabBtn.forEach((element, index) => {
+    element.addEventListener("click", function(){
+        
+        tabBtn.forEach( el => {
+            el.classList.remove("active");
+        });
+        element.classList.add("active");
+
+        tabCont.forEach( el => {
+            el.style.display = "none";
+        })
+        tabCont[index].style.display = "block";
+    });
+})
+</code></pre>
+                        </div>
+                    </div>
+                </div>
                 <button>닫기</button>
             </div>
         </div>
@@ -46,16 +285,35 @@ dddddddddddd
 
 
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.0/prism.min.js"></script>
+    <script src="../assets/js/custom.js"></script>
+    <script src="../assets/js/highlight.min.js"></script>
     <script>
-    $(".info button").click(function(){
-        $("#cont-wrap").removeClass().addClass("show");                           
-    });
+        const tabBtn = document.querySelectorAll(".tab-btn ul li")
+        const tabCont = document.querySelectorAll(".tab-cont > div")
 
-    $(".cont-box button").click(function(){
-        $("#cont-wrap").addClass("hide");
-    });
+        //1. 버튼을 클릭 -> active추가
+        //2. 나머지 버튼은 active 제거
+        //3. 버튼 인덱스 설정
+        //4. 첫 번째 버튼 -> 첫 번째 컨텐츠 연결
+        //5. 모든 컨텐츠를 안보이게 설정
+        //6. 클릭한 버튼의 컨텐츠만 보이게 설정
+
+        tabBtn.forEach((elem, index) => {
+            elem.addEventListener("click", function () {
+
+                tabBtn.forEach(el => {
+                    el.classList.remove("active");
+                });
+                elem.classList.add("active");
+
+                tabCont.forEach(element => {
+                    element.style.display = "none";
+                })
+                tabCont[index].style.display = "block";
+            });
+        })
+
     </script>
 </body>
+
 </html>
