--- a/site/sliderTest01.html
+++ b/site/sliderTest01.html
@@ -243,6 +243,151 @@
             color: #fff;
             margin-top: 80px;
         }
+
+        .cardType {
+            flex-wrap: wrap;
+            justify-content: center;
+            padding: 150px 0;
+        }
+
+        .cardType01 {
+            display: inline;
+        }
+
+        .cardType01 h2 {
+            font-family: 'NanumSquare';
+            color : #6d8bff;
+            font-size: 50px;
+            margin-top: 80px;
+            font-weight: 800;
+        }
+
+        .card01 {
+            font-family: 'NanumSquare';
+            margin-top: 50px;
+            border-radius: 20px;
+            width: 496px;
+            height: 870px;
+            background-color: #2F3033;
+            overflow: hidden;
+        }
+
+        .cardType01 .card01 .title{
+            color: #fff;
+            font-size: 20px;
+            padding-left: 40px;
+            margin-top: 20px;
+        }
+
+        .cardType01 .card01 .main {
+            font-size: 30px;
+            font-weight: 700;
+            color: #fff;
+            display: block;
+            padding-left: 40px;
+            margin-top: 10px;
+        }
+        .cardType01 .card01 .more {
+            color: #fff;
+            font-size: 20px;
+            padding-left: 40px;
+            margin-top: 30px;
+        }
+
+
+        .cardType01 .card01 .img img {
+            width: 496px;
+            height: 593px;
+            margin-top: 110px;
+            transform : scale(1);
+            transition: transform 0.4s;
+        }
+
+        .cardType01 .card01 .img:hover img{
+            transform : scale(1.1);
+        }
+
+        .right {
+            display: inline-block;
+        }
+
+
+        .card02 {
+            font-family: 'NanumSquare';
+            margin-top: 50px;
+            border-radius: 20px;
+            width: 496px;
+            height: 570px;
+            background-color: #2F3033;
+        }
+     
+
+        .card02 .title{
+            color: #fff;
+            font-size: 20px;
+        }
+
+        .card02 .main {
+            font-size: 30px;
+            font-weight: 700;
+            color: #fff;
+            display: block;
+        }
+        .card02 .more {
+            color: #fff;
+            font-size: 20px;
+        }
+
+
+        .card02 .img img {
+            width: 496px;
+            height: 294px;
+            margin-top: 125px;
+            transform : scale(1);
+            transition: transform 0.4s;
+        }
+
+        .card02 .img:hover img{
+            transform : scale(1.1);
+        }
+
+        .card03 {
+            font-family: 'NanumSquare';
+            margin-top: 50px;
+            border-radius: 20px;
+            width: 496px;
+            height: 570px;
+            background-color: #2F3033;
+            position: absolute;
+        }
+
+        .card03 .title{
+            color: #fff;
+            font-size: 20px;
+        }
+
+        .card03 .main {
+            font-size: 30px;
+            font-weight: 700;
+            color: #fff;
+            display: block;
+        }
+        .card03 .more {
+            color: #fff;
+            font-size: 20px;
+        }
+
+        .card03 .img img {
+            width: 496px;
+            height: 294px;
+            margin-top: 125px;
+            transform : scale(1);
+            transition: transform 0.4s;
+        }
+
+        .card03 .img:hover img{
+            transform : scale(1.1);
+        }
     </style>
     <!-- CSS -->
     <link rel="stylesheet" href="css/fonts.css">
@@ -340,6 +485,55 @@
         </div>
     </section>
     <!-- sliderType03 -->
+
+    <section class="cardType">
+        <div class="container">
+            <div class="cardType01">
+                <h2>인플루언서에게 <br> 제공되는<br> 광고수익과 혜택</h2>
+                <div class="card-wrap">
+                    <div class="card01">
+                        <a href="#">
+                            <span class="title">인플루언서 홈</span>
+                            <strong class="main">취향을 자유롭게 표현하는 <br> 나만의 홈페이지</strong>
+                            <span class="more">자세히 알아보기</span>
+                        </a>
+                        <div class="img">
+                            <img src="img/t1.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <article class="right">
+        <div class="card-wrap">
+            <div class="card02">
+                <a href="#">
+                    <span class="title">인플루언서 홈</span>
+                    <strong class="main">취향을 자유롭게 표현하는 <br> 나만의 홈페이지</strong>
+                    <span class="more">자세히 알아보기</span>
+                </a>
+                <div class="img">
+                    <img src="img/t2.png" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="card-wrap">
+            <div class="card03">
+                <a href="#">
+                    <span class="title">인플루언서 홈</span>
+                    <strong class="main">취향을 자유롭게 표현하는 <br> 나만의 홈페이지</strong>
+                    <span class="more">자세히 알아보기</span>
+                </a>
+                <div class="img">
+                    <img src="img/t3.png" alt="">
+                </div>
+            </div>
+        </div>
+    </article>
+
+    
 
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
     <script>
