--- a/refer-effect/menuEffect/jqueryME01.html
+++ b/refer-effect/menuEffect/jqueryME01.html
@@ -95,6 +95,9 @@
             .tab-cont > div p {
                 font-size: 14px;
             }
+            .info.right {
+                display: none;
+            }
         }
     </style>
 </head>
