--- a/refer-effect/parallaxEffect/javascriptPE01-1.html
+++ b/refer-effect/parallaxEffect/javascriptPE01-1.html
@@ -6,6 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Parallax Effect</title>
+    <style>
+        @media(max-width : 800px) {
+            .paraInfo h1 a {
+                display: none;
+            }
+
+            .paraInfo p {
+                display: none;
+            }
+        }
+    </style>
     ​
     <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="stylesheet" href="../assets/css/highlight.css">
