--- a/refer-effect/parallaxEffect/jquery01.html
+++ b/refer-effect/parallaxEffect/jquery01.html
@@ -7,17 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Parallax Effect</title>
     <style>
-         @media(max-width : 900px){
-            .paraInfo h1 a{
-                display: none;
-            }
-            .paraInfo p{
-                display: none;
-            }
-            .paraNav ul {
-                width: 100%;
-            }
-        }
+        
     </style>
     ​
     <link rel="stylesheet" href="../assets/css/style.css">
@@ -190,7 +180,7 @@
                     <div class="view-title">
                         <ul>
                             <li class="active"><a href="#">HTML</a></li>
-                            <li><a href="#">CSS</a></li>
+                            <li><a href="#">SCSS</a></li>
                             <li><a href="#">Jquery</a></li>
                         </ul>
                     </div>
@@ -496,80 +486,85 @@
 </code></pre>
                         </div>
                         <div>
-                            <pre><code class="language-javascript">document.querySelectorAll(".paraNav ul li a").forEach(el => {
-    el.addEventListener("click", e => {
+                            <pre><code class="language-javascript">  $(".paraNav ul li").click(function (e) {
         e.preventDefault();
-        document.querySelector(el.getAttribute("href")).scrollIntoView({
-            behavior: "smooth"
-        });
+        let target = $(this);
+        let index = target.index();
+        let section = $(".paraCont > section").eq(index);
+        let offset = section.offset().top;
+        $("html,body").animate({
+            scrollTop: offset
+        }, 600)
     });
+
+
+    $(window).scroll(function () {
+        let scrollTop = $(window).scrollTop();
+
+        $(".paraScroll span").text(parseInt(scrollTop));
+
+        // if( scrollTop >= $(".paraCont > section").eq(0).offset().top -2){
+        //     $(".paraNav ul li").eq(0).addClass("active").siblings().removeClass("active");
+        // }
+        // if( scrollTop >= $(".paraCont > section").eq(1).offset().top -2){
+        //     $(".paraNav ul li").eq(1).addClass("active").siblings().removeClass("active");
+        // }
+        // if( scrollTop >= $(".paraCont > section").eq(2).offset().top -2){
+        //     $(".paraNav ul li").eq(2).addClass("active").siblings().removeClass("active");
+        // }
+        // if( scrollTop >= $(".paraCont > section").eq(3).offset().top -2){
+        //     $(".paraNav ul li").eq(3).addClass("active").siblings().removeClass("active");
+        // }
+        // if( scrollTop >= $(".paraCont > section").eq(4).offset().top -2){
+        //     $(".paraNav ul li").eq(4).addClass("active").siblings().removeClass("active");
+        // }
+        // if( scrollTop >= $(".paraCont > section").eq(5).offset().top -2){
+        //     $(".paraNav ul li").eq(5).addClass("active").siblings().removeClass("active");
+        // }
+        // if( scrollTop >= $(".paraCont > section").eq(6).offset().top -2){
+        //     $(".paraNav ul li").eq(6).addClass("active").siblings().removeClass("active");
+        // }
+        // if( scrollTop >= $(".paraCont > section").eq(7).offset().top -2){
+        //     $(".paraNav ul li").eq(7).addClass("active").siblings().removeClass("active");
+        // }
+        // if( scrollTop >= $(".paraCont > section").eq(8).offset().top -2){
+        //     $(".paraNav ul li").eq(8).addClass("active").siblings().removeClass("active");
+        // }
+
+
+        //for
+        // for(let i = 0; i&lt;=10; i++){
+        //     if( scrollTop >= $(".paraCont > section").eq(i).offset().top -2){
+        //         $(".paraNav ul li").eq(i).addClass("active").siblings().removeClass("active");
+        //     }
+        // }
+
+        //each()
+        $(".content-item").each(function (index) {
+            if (scrollTop >= $(this).offset().top - 2) {
+                $(".paraNav ul li").eq(index).addClass("active").siblings().removeClass("active");
+            }
+        });
+
+
+
+        //info
+        $(".paraScroll span").text(parseInt(scrollTop));
+
+        // $(".offset1").text(parseInt($("#section1").offset().top) + "px");
+        // $(".offset2").text(parseInt($("#section2").offset().top) + "px");
+        // $(".offset3").text(parseInt($("#section3").offset().top) + "px");
+        // $(".offset4").text(parseInt($("#section4").offset().top) + "px");
+        // $(".offset5").text(parseInt($("#section5").offset().top) + "px");
+        // $(".offset6").text(parseInt($("#section6").offset().top) + "px");
+        // $(".offset7").text(parseInt($("#section7").offset().top) + "px");
+        // $(".offset8").text(parseInt($("#section8").offset().top) + "px");
+        // $(".offset9").text(parseInt($("#section9").offset().top) + "px");
+
+        for (let i = 1; i &lt; 10; i++) {
+            $(".offset" + i).text(parseInt($("#section" + i).offset().top) + "px");
+        }
     });
-
-    window.addEventListener("scroll", function(){
-    let scrollTop = window.pageYOffset || document.documentElement.scrollTop || window.scrollY;
-
-    if( scrollTop >= document.getElementById("section1").offsetTop ){
-        document.querySelectorAll(".paraNav ul li").forEach( el => {
-            el.classList.remove("active")
-        });
-        document.querySelector(".paraNav ul li:nth-child(1)").classList.add("active");
-    }
-    if( scrollTop >= document.getElementById("section2").offsetTop ){
-        document.querySelectorAll(".paraNav ul li").forEach( el => {
-            el.classList.remove("active")
-        });
-        document.querySelector(".paraNav ul li:nth-child(2)").classList.add("active");
-    }
-    if( scrollTop >= document.getElementById("section3").offsetTop ){
-        document.querySelectorAll(".paraNav ul li").forEach( el => {
-            el.classList.remove("active")
-        });
-        document.querySelector(".paraNav ul li:nth-child(3)").classList.add("active");
-    }
-    if( scrollTop >= document.getElementById("section4").offsetTop ){
-        document.querySelectorAll(".paraNav ul li").forEach( el => {
-            el.classList.remove("active")
-        });
-        document.querySelector(".paraNav ul li:nth-child(4)").classList.add("active");
-    }
-    if( scrollTop >= document.getElementById("section5").offsetTop ){
-        document.querySelectorAll(".paraNav ul li").forEach( el => {
-            el.classList.remove("active")
-        });
-        document.querySelector(".paraNav ul li:nth-child(5)").classList.add("active");
-    }
-    if( scrollTop >= document.getElementById("section6").offsetTop ){
-        document.querySelectorAll(".paraNav ul li").forEach( el => {
-            el.classList.remove("active")
-        });
-        document.querySelector(".paraNav ul li:nth-child(6)").classList.add("active");
-    }
-    if( scrollTop >= document.getElementById("section7").offsetTop ){
-        document.querySelectorAll(".paraNav ul li").forEach( el => {
-            el.classList.remove("active")
-        });
-        document.querySelector(".paraNav ul li:nth-child(7)").classList.add("active");
-    }
-    if( scrollTop >= document.getElementById("section8").offsetTop ){
-        document.querySelectorAll(".paraNav ul li").forEach( el => {
-            el.classList.remove("active")
-        });
-        document.querySelector(".paraNav ul li:nth-child(8)").classList.add("active");
-    }
-    if( scrollTop >= document.getElementById("section9").offsetTop ){
-        document.querySelectorAll(".paraNav ul li").forEach( el => {
-            el.classList.remove("active")
-        });
-        document.querySelector(".paraNav ul li:nth-child(9)").classList.add("active");
-    }
-    //info
-    document.querySelector(".paraScroll span").innerText = parseInt(scrollTop) + "px";
-
-    //for문
-    for(let i=1; i&lt;10; i++){
-        document.querySelector(".offset"+i).innerText = parseInt(document.getElementById("section"+i).offsetTop) + "px";
-    }
-});
 </code></pre>
                         </div>
                     </div>
