--- a/test.html
+++ b/test.html
@@ -1,198 +1,12 @@
-&lt;!DOCTYPE html&gt;
-&lt;html lang="en"&gt;
-&lt;head&gt;
-    &lt;meta charset="UTF-8"&gt;
-    &lt;meta http-equiv="X-UA-Compatible" content="IE=edge"&gt;
-    &lt;meta name="viewport" content="width=device-width, initial-scale=1.0"&gt;
-    &lt;title&gt;Document&lt;/title&gt;
-    &lt;style&gt;
-        #tab-menu {
-            min-width: 600px;
-            background: rgb(118, 133, 175);
-            position: absolute;
-            left: 50%;
-            top: 50%;
-            transform: translate(-50%, -50%);
-            border-radius: 5px;
-            overflow: hidden;
-            font-family: 'NEXON Lv1 Gothic OTF';
-            color: #fff;
-
-        }
-
-        .tab-btn ul {
-            display: flex;
-        }
-
-        .tab-btn li {
-            width: 20%;
-            list-style: none;
-            text-align: center;
-        }
-
-        .tab-btn li a {
-            color: #fff;
-            text-decoration: none;
-            padding: 18px 15px 15px 15px;
-            display: block;
-        }
-
-        .tab-btn li.active a {
-            border-bottom: 3px solid rgb(61, 69, 128);
-            color: #000;
-        }
-
-        .tab-cont {
-            background: #fff;
-            padding: 20px;
-            color: #222;
-        }
-
-        .tab-cont&gt;div {
-            display: none;
-        }
-
-        .tab-cont&gt;div:first-child {
-            display: block;
-        }
-
-        .tab-cont&gt;div h2 {
-            margin-bottom: 10px;
-        }
-
-        .tab-cont&gt;div p {
-            line-height: 1.6;
-        }
-    &lt;/style&gt;
-&lt;/head&gt;
-&lt;body&gt;
-    &lt;!-- main --&gt;
-    &lt;main&gt;
-
-        &lt;div class="paraScroll"&gt;scrollTop() : &lt;span&gt;0&lt;/span&gt;&lt;/div&gt;
-        &lt;!--//scroll--&gt;
-        &lt;div class="paraInfo2"&gt;
-            &lt;ul&gt;
-                &lt;li&gt;section1 offset() : &lt;span class="offset1"&gt;0&lt;/span&gt;&lt;/li&gt;
-                &lt;li&gt;section2 offset() : &lt;span class="offset2"&gt;0&lt;/span&gt;&lt;/li&gt;
-                &lt;li&gt;section3 offset() : &lt;span class="offset3"&gt;0&lt;/span&gt;&lt;/li&gt;
-                &lt;li&gt;section4 offset() : &lt;span class="offset4"&gt;0&lt;/span&gt;&lt;/li&gt;
-                &lt;li&gt;section5 offset() : &lt;span class="offset5"&gt;0&lt;/span&gt;&lt;/li&gt;
-                &lt;li&gt;section6 offset() : &lt;span class="offset6"&gt;0&lt;/span&gt;&lt;/li&gt;
-                &lt;li&gt;section7 offset() : &lt;span class="offset7"&gt;0&lt;/span&gt;&lt;/li&gt;
-                &lt;li&gt;section8 offset() : &lt;span class="offset8"&gt;0&lt;/span&gt;&lt;/li&gt;
-                &lt;li&gt;section9 offset() : &lt;span class="offset9"&gt;0&lt;/span&gt;&lt;/li&gt;
-            &lt;/ul&gt;
-        &lt;/div&gt;
-
-        &lt;nav class="paraNav"&gt;
-            &lt;ul&gt;
-                &lt;li class="active"&gt;&lt;a href="#section1"&gt;s1&lt;/a&gt;&lt;/li&gt;
-                &lt;li&gt;&lt;a href="#section2"&gt;s2&lt;/a&gt;&lt;/li&gt;
-                &lt;li&gt;&lt;a href="#section3"&gt;s3&lt;/a&gt;&lt;/li&gt;
-                &lt;li&gt;&lt;a href="#section4"&gt;s4&lt;/a&gt;&lt;/li&gt;
-                &lt;li&gt;&lt;a href="#section5"&gt;s5&lt;/a&gt;&lt;/li&gt;
-                &lt;li&gt;&lt;a href="#section6"&gt;s6&lt;/a&gt;&lt;/li&gt;
-                &lt;li&gt;&lt;a href="#section7"&gt;s7&lt;/a&gt;&lt;/li&gt;
-                &lt;li&gt;&lt;a href="#section8"&gt;s8&lt;/a&gt;&lt;/li&gt;
-                &lt;li&gt;&lt;a href="#section9"&gt;s9&lt;/a&gt;&lt;/li&gt;
-            &lt;/ul&gt;
-        &lt;/nav&gt;
-        &lt;!--//nav--&gt;
-
-        &lt;div class="paraCont"&gt;
-            &lt;section id="section1" class="content-item"&gt;
-                &lt;span class="num"&gt;01&lt;/span&gt;
-                &lt;h2 class="title"&gt;Section1&lt;/h2&gt;
-                &lt;figure class="img-Wrap"&gt;
-                    &lt;div class="img"&gt;&lt;/div&gt;
-                &lt;/figure&gt;
-                &lt;p class="desc"&gt;추구할 수 있는 용기가 있다면 우리의 모든 꿈은 이뤄질 수 있다.&lt;/p&gt;
-            &lt;/section&gt;
-            &lt;!-- //section1 --&gt;
-            ​
-            &lt;section id="section2" class="content-item"&gt;
-                &lt;span class="num"&gt;02&lt;/span&gt;
-                &lt;h2 class="title"&gt;Section2&lt;/h2&gt;
-                &lt;figure class="img-Wrap"&gt;
-                    &lt;div class="img"&gt;&lt;/div&gt;
-                &lt;/figure&gt;
-                &lt;p class="desc"&gt; 열정을 잃지 않고 실패에서 실패로 걸어가는 것이 성공이다.&lt;/p&gt;
-            &lt;/section&gt;
-            &lt;!-- //section2 --&gt;
-            ​
-            &lt;section id="section3" class="content-item"&gt;
-                &lt;span class="num"&gt;03&lt;/span&gt;
-                &lt;h2 class="title"&gt;Section3&lt;/h2&gt;
-                &lt;figure class="img-Wrap"&gt;
-                    &lt;div class="img"&gt;&lt;/div&gt;
-                &lt;/figure&gt;
-                &lt;p class="desc"&gt;애벌레가 세상이 끝났다고 생각하는 순간 나비로 변했다.&lt;/p&gt;
-            &lt;/section&gt;
-            &lt;!-- //section3 --&gt;
-            ​
-            &lt;section id="section4" class="content-item"&gt;
-                &lt;span class="num"&gt;04&lt;/span&gt;
-                &lt;h2 class="title"&gt;Section4&lt;/h2&gt;
-                &lt;figure class="img-Wrap"&gt;
-                    &lt;div class="img"&gt;&lt;/div&gt;
-                &lt;/figure&gt;
-                &lt;p class="desc"&gt;나는 실패한 게 아니다. 나는 잘 되지 않는 방법 1만 가지를 발견한 것이다.&lt;/p&gt;
-            &lt;/section&gt;
-            &lt;!-- //section4 --&gt;
-            ​
-            &lt;section id="section5" class="content-item"&gt;
-                &lt;span class="num"&gt;05&lt;/span&gt;
-                &lt;h2 class="title"&gt;Section5&lt;/h2&gt;
-                &lt;figure class="img-Wrap"&gt;
-                    &lt;div class="img"&gt;&lt;/div&gt;
-                &lt;/figure&gt;
-                &lt;p class="desc"&gt; 게으른 예술가가 만든 명작은 없다.&lt;/p&gt;
-            &lt;/section&gt;
-            &lt;!-- //section5 --&gt;
-            ​
-            &lt;section id="section6" class="content-item"&gt;
-                &lt;span class="num"&gt;06&lt;/span&gt;
-                &lt;h2 class="title"&gt;Section6&lt;/h2&gt;
-                &lt;figure class="img-Wrap"&gt;
-                    &lt;div class="img"&gt;&lt;/div&gt;
-                &lt;/figure&gt;
-                &lt;p class="desc"&gt;사람들이 인생에서 실패하는 가장 큰 이유는 친구, 가족, 이웃들의 말을 듣기 때문이다.&lt;/p&gt;
-            &lt;/section&gt;
-            &lt;!-- //section6 --&gt;
-            ​
-            &lt;section id="section7" class="content-item"&gt;
-                &lt;span class="num"&gt;07&lt;/span&gt;
-                &lt;h2 class="title"&gt;Section7&lt;/h2&gt;
-                &lt;figure class="img-Wrap"&gt;
-                    &lt;div class="img"&gt;&lt;/div&gt;
-                &lt;/figure&gt;
-                &lt;p class="desc"&gt;위대한 일들을 이루기 전에 스스로에게 위대한 일들을 기대해야 한다.&lt;/p&gt;
-            &lt;/section&gt;
-            &lt;!-- //section7 --&gt;
-            ​
-            &lt;section id="section8" class="content-item"&gt;
-                &lt;span class="num"&gt;08&lt;/span&gt;
-                &lt;h2 class="title"&gt;Section8&lt;/h2&gt;
-                &lt;figure class="img-Wrap"&gt;
-                    &lt;div class="img"&gt;&lt;/div&gt;
-                &lt;/figure&gt;
-                &lt;p class="desc"&gt;높은 목표를 세우고, 스스로 채찍질 한다.&lt;/p&gt;
-            &lt;/section&gt;
-            &lt;!-- //section8 --&gt;
-            ​
-            &lt;section id="section9" class="content-item"&gt;
-                &lt;span class="num"&gt;09&lt;/span&gt;
-                &lt;h2 class="title"&gt;Section9&lt;/h2&gt;
-                &lt;figure class="img-Wrap"&gt;
-                    &lt;div class="img"&gt;&lt;/div&gt;
-                &lt;/figure&gt;
-                &lt;p class="desc"&gt;높은 목표를 세우고, 스스로 채찍질 한다.&lt;/p&gt;
-            &lt;/section&gt;
-            &lt;!-- //section9 --&gt;
-        &lt;/div&gt;
-        &lt;!-- //contents --&gt;
-    &lt;/main&gt;
-    &lt;!-- //main --&gt;
-&lt;/body&gt;
-&lt;/html&gt;
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    
+</body>
+</html>
