--- a/refer-effect/parallaxEffect/index.html
+++ b/refer-effect/parallaxEffect/index.html
@@ -28,11 +28,11 @@
             <li><a href="javascriptPE05.html">5</a></li>
         </ul>
         <ul>
-            <li><a href="jquery01.html">1</a></li>
-            <li><a href="jquery02.html">2</a></li>
-            <li><a href="jquery03.html">3</a></li>
-            <li><a href="jquery04.html">4</a></li>
-            <li><a href="jquery05.html">5</a></li>
+            <li><a href="jqueryPE01.html">1</a></li>
+            <li><a href="jqueryPE02.html">2</a></li>
+            <li><a href="jqueryPE03.html">3</a></li>
+            <li><a href="jqueryPE04.html">4</a></li>
+            <li><a href="jqueryPE05.html">5</a></li>
         </ul>
     </nav>
     
